--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -4,10 +4,10 @@ The rotational evolution of cool dwarfs is mostly unconstrained after around
 2-3 billion years, and the gyrochronology relations are poorly calibrated
 beyond this time due to a lack of precise ages and rotation periods for old
 main-sequence stars.
-However, recent evidence suggests that the relationship between rotation
-period and color/temperature/mass does not remain constant over large
-timescales, contradicting a long-held assumption that underlies many
-gyrochronology relations.
+% However, recent evidence suggests that the relationship between rotation
+% period and color/temperature/mass does not remain constant over large
+% timescales, contradicting a long-held assumption that underlies many
+% gyrochronology relations.
 We use the velocities of populations of cool dwarfs to reveal the rotational
 evolution of these stars at old ages.
 We find that groups of stars, selected to be the same age using a
