--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -1,2 +1,95 @@
 \section{Discussion}
 \label{sec:discussion}
+
+\subsection{The period gap}
+\label{sec:period_gap}
+
+The origin of the rotation period gap, first identified
+by \citet{mcquillan2013} and visible in figures \ref{fig:age_cut} and
+\ref{fig:dispersion_period_teff} still remains a mystery.
+This gap can be seen as an under-density of points between the 0.7-1.0 and
+1.0-1.5 Gyr age ranges in figure \ref{fig:age_cut} and roughly follows a line
+of constant gyrochronal age of around 1.1 Gyr \citep[according to the
+gyrochronology relation of][]{angus2019}, as shown in figure
+\ref{fig:dispersion_period_teff}.
+Several explanations for the gap's origin have been proposed, including a
+discontinuous star formation history \citep{mcquillan2013, davenport2017,
+davenport2018}, a rapid change in magnetic field structure
+\citep{reinhold2019}, and erroneous rotation period measurements that are
+incorrect by a factor of two \citep{koen2018}.
+The latter explanation can be ruled out because stars below the gap have
+smaller velocity dispersions than the stars above the gap, indicating that
+they are kinematically younger \citep{mcquillan2013, davenport2018}, as
+evident in figures \ref{fig:age_cut} and \ref{fig:dispersion_period_teff}.
+For stars below the gap, in the 0.7-1.0 Gyr age range shown in figure
+\ref{fig:age_cut}, velocity dispersion is relatively constant as a function of
+temperature, however above the gap, in the 1.0-1.5 Gyr age range and older,
+velocity dispersion increases with \teff.
+The coolest stars in the 1.0-1.5 Gyr age range have the same velocity
+dispersion as the hottest stars in the age range above which indicates that
+the period-\teff\ relations are {\it flat} at these rotation periods.
+This is also visible in figure \ref{fig:dispersion_period_teff}.
+Below the gap, velocity dispersion within a given period range appears to {\it
+decrease} with decreasing temperature.
+The opposite appears to be true above the gap.
+It could be that the gap is positioned at a significant Rossby number/age at
+which stellar magnetic dynamos go through a transition.
+Perhaps before the age of 1.1 Gyr, or at Rossby numbers less than ???,
+magnetic braking is more efficient for stars with deeper convection zones.
+Once stars reach this critical age or Rossby number their magnetic fields
+undergo some radical transition, which produces the gap in the rotation
+period-\teff\ plane.
+After this transition, magnetic braking efficiency no longer increases with
+decreasing mass.
+Of course, it may be a coincidence that the gyrochronology relations seem to
+only flatten off above the period gap and we lack a sufficient quantity of
+data to do more than speculate here.
+New rotation periods from the \ktwo\ and \tess\ missions may be able to
+validate or rule out this hypothesis in the future.
+
+In the $\sim$ 1.1 Gyr NGC 6811 cluster, the rotation periods of mid-K dwarfs
+are faster than expected; their rotational evolution appears to have stalled,
+and they have similar rotation periods to the 650 Myr Praesepe cluster
+\citep{curtis2019}.
+The rotation periods of the K dwarfs in this cluster are plotted in figure
+\ref{fig:dispersion_period_teff}.
+Although NGC 6811's G dwarfs fall on the 1.1 Gyr gyrochronology model, the K
+dwarfs lie only a little above the 0.65 Gyr gyrochronology model.
+NGC 6811 straddles the rotation period gap: its G dwarfs lie above it and its
+K dwarfs lie below it.
+This cluster may be the `missing link' that connects two epoch of stellar
+spin-down.
+However, figure \ref{fig:age_cut} indicates that the Praesepe gyrochronology
+model is, on average, a good model for stars younger than $\sim$1 Gyr. This
+model has a very different shape to the NGC 6811 cluster.
+This would suggest that stars in the field do follow the period-color/\teff\
+relation of Praesepe, at least up to around 1 Gyr.
+We do not find evidence of the K dwarf stalling, which is observed in NGC
+6811, in the field.
+% , however without more observations of middle-aged open clusters it : an
+% early stage where the period-\teff\ relation for cool dwarfs has a negative
+% slope and a late stage where it has a positive slope.
+% In this case the period gap may delineate the transition between these two
+% regimes and is the point at which stellar magnetic dynamos likely undergo a
+% dramatic structural shift at an age of $\sim$ 1.1 Gyr.
+
+% \subsection{Caveats}
+% \label{sec:caveats}
+
+% There are some alternative explanations for the trends seen in figures
+% \ref{fig:age_cut} and \ref{fig:}
+% We list these potential issues below.
+% \begin{itemize}
+% \item{
+% The selection function for these data is extremely complicated, etc.
+% }
+% \item{
+% Redenning for the coolest stars.
+% }
+% \item{
+% Planets/companions for the coolest stars.
+% }
+% \item{
+% Subgiant contamination/weakened magnetic braking.
+% }
+% \end{itemize}
