--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -121,8 +121,8 @@ approach to calibrating gyrochronology}
 % Word limit: 500, currently 1178
 \include{results}
 
-% % Word limit: 500
-% \include{discussion}
+% Word limit: 500
+\include{discussion}
 
 % Word limit: 250, currently 263
 \include{conclusion}
