--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,5 +1,10 @@
-This work was partly developed at the KITP conference 'Better stars, better
-planets'.
+This work was partly developed at the 2019 KITP conference 'Better stars,
+better planets'.
+Parts of this project are based on ideas explored at the Gaia sprints at the
+Flatiron Institute in New York City, 2016 and MPIA, Heidelberg, 2017.
+
+This work made use of the gaia-kepler.fun crossmatch database created by Megan
+Bedell.
 
 Some of the data presented in this paper were obtained from the Mikulski
 Archive for Space Telescopes (MAST).
@@ -10,12 +15,9 @@ Science via grant NNX09AF08G and by other grants and contracts.
 This paper includes data collected by the Kepler mission. Funding for the
 \Kepler\ mission is provided by the NASA Science Mission directorate.
 
-This work made use of the gaia-kepler.fun crossmatch database created by Megan
-Bedell
-
 This work has made use of data from the European Space Agency (ESA) mission
-{\it Gaia} (\url{https://www.cosmos.esa.int/gaia}), processed by the {\it Gaia}
-Data Processing and Analysis Consortium (DPAC,
-\url{https://www.cosmos.esa.int/web/gaia/dpac/consortium}). Funding for the DPAC
-has been provided by national institutions, in particular the institutions
-participating in the {\it Gaia} Multilateral Agreement.
+{\it Gaia} (\url{https://www.cosmos.esa.int/gaia}), processed by the {\it
+Gaia} Data Processing and Analysis Consortium (DPAC,
+\url{https://www.cosmos.esa.int/web/gaia/dpac/consortium}).
+Funding for the DPAC has been provided by national institutions, in particular
+the institutions participating in the {\it Gaia} Multilateral Agreement.
