--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -21,26 +21,28 @@ The latter explanation can be ruled out because stars below the gap have
 smaller velocity dispersions than the stars above the gap, indicating that
 they are kinematically younger \citep{mcquillan2013, davenport2018}, as
 evident in figures \ref{fig:age_cut} and \ref{fig:dispersion_period_teff}.
+
 For stars below the gap, in the 0.7-1.0 Gyr age range shown in figure
 \ref{fig:age_cut}, velocity dispersion is relatively constant as a function of
 temperature, however above the gap, in the 1.0-1.5 Gyr age range and older,
 velocity dispersion increases with \teff.
 The coolest stars in the 1.0-1.5 Gyr age range have the same velocity
-dispersion as the hottest stars in the age range above which indicates that
-the period-\teff\ relations are {\it flat} at these rotation periods.
-This is also visible in figure \ref{fig:dispersion_period_teff}.
+dispersion as the mid-temperature stars in the age range above, and the
+hottest stars in the age range above {\it that}, which indicates that the
+period-\teff\ relations are {\it flat} at rotation periods between $sim$15-25
+days, for 5500 K $<$ \teff\ $<$ 4000 K.
 Below the gap, velocity dispersion within a given period range appears to {\it
 decrease} with decreasing temperature.
 The opposite appears to be true above the gap.
-It could be that the gap is positioned at a significant Rossby number/age at
-which stellar magnetic dynamos go through a transition.
+
+The gap may be positioned at a significant Rossby number/age at which stellar
+magnetic dynamos go through a transition.
 Perhaps before the age of 1.1 Gyr, or at Rossby numbers less than ???,
 magnetic braking is more efficient for stars with deeper convection zones.
 Once stars reach this critical age or Rossby number their magnetic fields
-undergo some radical transition, which produces the gap in the rotation
-period-\teff\ plane.
-After this transition, magnetic braking efficiency no longer increases with
-decreasing mass.
+undergo some transition, which produces the gap in the rotation period-\teff\
+plane and after this transition, magnetic braking efficiency no longer
+increases with decreasing mass.
 Of course, it may be a coincidence that the gyrochronology relations seem to
 only flatten off above the period gap and we lack a sufficient quantity of
 data to do more than speculate here.
@@ -51,7 +53,7 @@ In the $\sim$ 1.1 Gyr NGC 6811 cluster, the rotation periods of mid-K dwarfs
 are faster than expected; their rotational evolution appears to have stalled,
 and they have similar rotation periods to the 650 Myr Praesepe cluster
 \citep{curtis2019}.
-The rotation periods of the K dwarfs in this cluster are plotted in figure
+The rotation periods of the K dwarfs in NGC 6811 are plotted in figure
 \ref{fig:dispersion_period_teff}.
 Although NGC 6811's G dwarfs fall on the 1.1 Gyr gyrochronology model, the K
 dwarfs lie only a little above the 0.65 Gyr gyrochronology model.
@@ -60,12 +62,11 @@ K dwarfs lie below it.
 This cluster may be the `missing link' that connects two epoch of stellar
 spin-down.
 However, figure \ref{fig:age_cut} indicates that the Praesepe gyrochronology
-model is, on average, a good model for stars younger than $\sim$1 Gyr. This
-model has a very different shape to the NGC 6811 cluster.
-This would suggest that stars in the field do follow the period-color/\teff\
-relation of Praesepe, at least up to around 1 Gyr.
-We do not find evidence of the K dwarf stalling, which is observed in NGC
-6811, in the field.
+model is, on average, a {\it good} model for stars younger than $\sim$1 Gyr
+% and this model has a very different shape to the NGC 6811 cluster.
+suggesting that stars in the field follow the period-color/\teff\ relation of
+Praesepe, at least up to around 1 Gyr.
+We do not see strong evidence of K dwarf stalling in the field.
 % , however without more observations of middle-aged open clusters it : an
 % early stage where the period-\teff\ relation for cool dwarfs has a negative
 % slope and a late stage where it has a positive slope.
