--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -29,7 +29,7 @@ velocity dispersion increases with \teff.
 The coolest stars in the 1.0-1.5 Gyr age range have the same velocity
 dispersion as the mid-temperature stars in the age range above, and the
 hottest stars in the age range above {\it that}, which indicates that the
-period-\teff\ relations are {\it flat} at rotation periods between $sim$15-25
+period-\teff\ relations are {\it flat} at rotation periods between $\sim$15-25
 days, for 5500 K $<$ \teff\ $<$ 4000 K.
 Below the gap, velocity dispersion within a given period range appears to {\it
 decrease} with decreasing temperature.
